# synapse-core

./: .env.development  .env.production  .gitignore  BRANCH_README.md  CHECKLIST.md  CI_CD_READY.md  CLI.md  COMPILATION_VERIFICATION.md  CONTRIBUTING.md  Cargo.toml  FINAL_DELIVERY_SUMMARY.md  GITHUB_PR_TEMPLATE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  PR_DESCRIPTION.md  README.md  STATE_MACHINE_DIAGRAMS.md  cliff.toml  deny.toml  docker-compose.dev.yml  docker-compose.yml  dockerfile
.github/: PULL_REQUEST_TEMPLATE.md
benches/: critical_paths.rs
cli/synapse-cli/: Cargo.toml  README.md
cli/synapse-cli/src/: cli_main.rs  client.rs  error.rs  formatter.rs  lib.rs  main.rs  output.rs
cli/synapse-cli/src/commands/: events.rs  graphql.rs  health.rs  mod.rs  settlements.rs  stats.rs  transactions.rs
cli/synapse-cli/tests/: admin_locks_list_test.rs  admin_webhooks_health_test.rs  cli.rs  completions.rs  error_handling.rs  events_watch_test.rs  export_tests.rs  graphql_integration.rs  integration_tests.rs  mock_server_example.rs  transactions_get_integration.rs
cli/synapse-cli/tests/support/: mod.rs
docs/: CLI.md  QUICK_START.md  api-reference.md  cache-data-export.md  cache-input-validation.md  ci-cd-pagination.md  ci-cd-webhook.md  database-input-validation.md  database-reconnection-logic.md  deployment.md  graphql-health-checks.md  handler-integration-example.md  migration-safety.md  pagination.md  payments-error-handling.md  query-plans.md  runbook.md  security-health-checks.md  set-local-vs-pool-hooks.md  settlement-transition-unification.md  setup.md  telemetry-health-checks.md  tenant-rls-request-path.md  threat-model-callback-auth.md
migrations/: 20250217000001_add_webhook_endpoints.down.sql  20250217000001_add_webhook_endpoints.sql  20260223000000_webhook_replay_tracking.sql  20260325000000_webhook_endpoints.sql  20260422000000_ensure_current_partitions.sql  20260423000000_idempotency_fallback.sql  20260425000001_reconciliation_reports.sql  20260425000002_webhook_endpoint_reliability.down.sql  20260425000002_webhook_endpoint_reliability.sql  20260426000001_feature_flag_rollout.down.sql  20260426000001_feature_flag_rollout.sql  20260426000002_feature_flag_audit.down.sql  20260426000002_feature_flag_audit.sql  20260426000003_backup_verification.down.sql  20260426000003_backup_verification.sql  20260427000000_optimized_search_indexes.down.sql  20260427000000_optimized_search_indexes.sql  20260428000000_compliance_reports.down.sql  20260428000000_compliance_reports.sql  20260428000001_asset_processing_rules.down.sql  20260428000001_asset_processing_rules.sql  20260428000002_feature_flag_dependencies.down.sql  20260428000002_feature_flag_dependencies.sql  20260428000003_seed_default_assets.down.sql  20260428000003_seed_default_assets.sql  20260429000000_compliance_reports_unique_period.down.sql  20260429000000_compliance_reports_unique_period.sql  20260430000000_create_tenants.down.sql  20260430000000_create_tenants.sql  20260501000000_tenant_rls.down.sql  20260501000000_tenant_rls.sql  20260502000000_settlement_dispute.down.sql  20260502000000_settlement_dispute.sql  20260601000000_webhook_exactly_once_delivery.down.sql  20260601000000_webhook_exactly_once_delivery.sql  20260620000000_add_horizon_payment_id.down.sql  20260620000000_add_horizon_payment_id.sql  20260621000000_callback_idempotency.down.sql  20260621000000_callback_idempotency.sql
scripts/: check-migration-safety.sh
sdks/rust/: Cargo.toml  PR_DESCRIPTION_621.md  README.md
sdks/rust/examples/: admin_locks_list.rs  admin_reconciliation.rs  events_reconnect.rs  events_subscribe.rs  graphql_query.rs  settlements_get.rs  settlements_list.rs  settlements_list_get.rs  stats_overview.rs  transactions_get.rs  transactions_list.rs  transactions_search.rs
sdks/rust/src/: admin.rs  admin_models.rs  client.rs  error.rs  lib.rs  models.rs  pagination.rs  retry.rs
sdks/rust/src/resources/: admin.rs  events.rs  graphql.rs  health.rs  mod.rs  settlements.rs  stats.rs  transactions.rs
sdks/rust/src/resources/admin/: locks.rs  mod.rs  reconciliation.rs  settlements.rs
src/: cli.rs  config.rs  error.rs  health.rs  lib.rs  main.rs  metrics.rs  readiness.rs  secrets.rs  startup.rs  telemetry.rs
tests/: api_versioning_test.rs  auth_and_signature_integration_test.rs  (+35 more)
(+137 files in other folders)
