[package]
name = "synapse-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "synapse"
path = "src/main.rs"

[[bin]]
name = "mock-server"
path = "src/bin/mock-server.rs"

[lib]
name = "synapse_cli"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bytes = "1"
csv = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
tokio = { version = "1", features = ["full"] }
wiremock = "0.5"
mockito = "1"
