[workspace]

[package]
name = "synapse-sdk"
version = "0.1.0"
edition = "2021"
description = "Rust client SDK for the Synapse Core API"
license = "MIT"

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
wiremock = "0.5"
