[package]
name = "synapse-sdk"
version = "0.1.0"
edition = "2021"
description = "Rust client SDK for the Synapse API"
license = "MIT"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
rand = "0.8"
tokio = { version = "1", features = ["time"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
wiremock = "0.5"
tokio = { version = "1", features = ["full"] }
